# aoc23

./: Cargo.toml  LICENSE
python/: day 21.ipynb  day_20.ipynb  day_24.ipynb  pixi.toml
python/.ipynb_checkpoints/: day_20-checkpoint.ipynb
python/day_24/: day_24.ipynb  pixi.toml
src/: day_1.rs  day_1_data.txt  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_7b.rs  day_n.rs  main.rs
src/day_10/: a.rs  b.rs  mod.rs
src/day_11/: b.rs  mod.rs
src/day_12/: a.rs  b.rs  b_old.rs  mod.rs
src/day_13/: a.rs  b.rs  mod.rs
src/day_14/: a.rs  b.rs  mod.rs
src/day_15/: a.rs  b.rs  mod.rs
src/day_16/: a.rs  b.rs  mod.rs
src/day_17/: a.rs  b.rs  mod.rs
src/day_18/: a.rs  b.rs  mod.rs
src/day_19/: a.rs  b.rs  mod.rs
src/day_20/: a.rs  b.rs  data copy.txt  mod.rs
src/day_21/: a.rs  b.rs  mod.rs
src/day_22/: a.rs  b.rs  mod.rs
src/day_23/: a.rs  b.rs  mod.rs
src/day_24/: a.rs  b.rs  mod.rs
src/day_25/: a.rs  b.rs  mod.rs
src/day_7/: day_7a.rs  day_7b.rs  mod.rs
src/day_8/: a.rs  b.rs  mod.rs
src/day_9/: a.rs  b.rs  mod.rs
src/day_n/: a.rs  b.rs  day_na.rs  day_nb.rs  mod.rs
