[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.7"
itertools = "0.12.0"
ndarray = "0.15.6"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.8.0"
simple-tqdm = {version="0.1.4", features=["rayon"]}
strum = "0.25.0"
strum_macros = "0.25.3"
